Added negative number recognition and basic tests.